fix checkbox on mobile width

--- a/source/sass/blocks/form-submit.scss
+++ b/source/sass/blocks/form-submit.scss
@@ -105,4 +105,8 @@
   height: 10px;
   bottom: 34%;
   left: 1.4%;
+
+  @include vp-767 {
+    left: 3%;
+  }
 }
